instructions for emr version 4